--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="https://youtu.be/od_h3nl5SXg" class="image fit"><img src="images/thumbs/newbery.png" title="Newbery Award Bookds" alt="Newbery Award Bookds" /></a>
+								<a href="https://youtu.be/od_h3nl5SXg" class="image fit"><img src="images/thumbs/newbery.png" title="Newbery Award Books" alt="Newbery Award Books" /></a>
 							</article>							
 							<article class="from-right">
 								<a href="https://youtu.be/H1NRMwqK_Ng" class="image fit"><img src="images/thumbs/featured.png" title="Featured Children's Books" alt="Featured Children's Books" /></a>
