--- a/joinus/index.html
+++ b/joinus/index.html
@@ -1,128 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Soryx Academia</title>
-		<meta charset="utf-8" />
-		<meta name="description" content="Soryx Academia - Soryx is an innovative way to connect teachers and students">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-							<a href="https://www.soryx.com/"><span class="icon solid fa-university"></span></a>
-						</div>
-						<div class="content">
-							<div class="inner">
-								<h1>S o r y x</h1>
-								<p>We are inviting teachers to join us.<br />
-								Become a valued member of our team.</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#article1">Who We Are</a></li>
-								<li><a href="#article2">Who We Want</a></li>
-								<li><a href="#article3">What We Offer</a></li>
-								<li><a href="#contact">Contact Us</a></li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Article1 -->
-							<article id="article1">
-								<h2 class="major">Who We Are</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Soryx is an innovative way to connect teachers and students. We are based in Canada and South Korea. We introduce teachers directly to parents looking for high-quality ESL education for their children. We help teachers and students do well in their classes by using our combined years of teaching experience.</p>
-							</article>
-
-						<!-- Article2 -->
-							<article id="article2">
-								<h2 class="major">Who We Want</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>We are seeking English Second Language teachers to join our team. Our ideal candidate will be a native English speaker with experience teaching ESL to children between the ages of 4 and 18. A bachelor's degree and a teaching certificate are preferred. If this sounds like the right fit for you, please contact us.</p>
-							</article>
-
-						<!-- Article3 -->
-							<article id="article3">
-								<h2 class="major">What We Offer</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>We offer flexible working hours, competitive salaries, teaching materials, and opportunities to collaborate with like-minded teachers. Teachers can work from home at their own convenience while earning good wages. Our teachers work together to offer high-quality lessons by sharing their experiences and knowledge.</p>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact Us</h2>
-								<form method="POST" action="https://usebasin.com/f/8799834bf76f">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" required />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" required />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message" rows="2" required></textarea>
-										</div>
-									</div>
-									<center><div class="g-recaptcha" data-size="compact" data-theme="dark" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div></center>
-									<center><div><p></p></div></center>
-									<ul class="actions special">
-										<li><input type="submit" name="submit" value="Send Message" class="primary" /></li>
-									</ul>
-								</form>
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://www.soryx.com" class="icon solid fa-university"><span class="label">Academia</span></a></li>
-							<li><a href="https://www.soryx.net" class="icon solid fa-school"><span class="label">Academy</span></a></li>
-							<li><a href="https://www.soryx.kr" class="icon solid fa-star"><span class="label">Universe</span></a></li>
-							<li><a href="https://www.youtube.com/@soryxuniverse" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-							<li><a href="https://linktr.ee/soryx" class="icon solid fa-link"><span class="label">Linktree</span></a></li>
-						</ul>
-						<p class="copyright">&copy; Soryx Academia &bull; Design by HTML5UP</p>
-					</footer>
-
-			</div>
-
-		<!-- BG -->
-			<div id="bg"></div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-		<!-- Basin Analytics Tracking -->
-			<script type="text/javascript">
-				function configureAhoy() {
-					ahoy.configure({
-						visitsUrl: "https://usebasin.com/ahoy/visits",
-						eventsUrl: "https://usebasin.com/ahoy/events",
-						page: "8799834bf76f" /* Use your form id here */
-					});
-					ahoy.trackView();
-					ahoy.trackSubmits();
-				}
-			</script>
-			<script src="https://cdn.jsdelivr.net/npm/ahoy.js@0.3.9/dist/ahoy.min.js" async defer onload="configureAhoy()"></script>
-
-	</body>
-</html>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Soryx Apply</title>
+<meta http-equiv="refresh" content="0; URL=https://joinus.soryx.com/">
+<link rel="canonical" href="https://joinus.soryx.com/">
