--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<li><a href="#work">Our Teachers</a></li>
 						<li><a href="#book">Our Materials</a></li>
 						<li><a href="#contact">Contact Us</a></li>
-						<li><a href="https://www.soryx.com/joinus/">Join Us</a></li>
+						<li><a href="https://joinus.soryx.com">Join Us</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -156,7 +156,7 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="https://www.soryx.com/joinus" class="icon solid fa-chalkboard-teacher"><span class="label">Join Us</span></a></li>
+						<li><a href="https://joinus.soryx.com" class="icon solid fa-chalkboard-teacher"><span class="label">Join Us</span></a></li>
 						<li><a href="https://www.soryx.net" class="icon solid fa-school"><span class="label">Academy</span></a></li>
 						<li><a href="https://www.soryx.kr" class="icon solid fa-star"><span class="label">Universe</span></a></li>
 						<li><a href="https://www.youtube.com/@soryxuniverse" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
