--- a/joinus/index.html
+++ b/joinus/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Soryx Apply</title>
+<title>Join Us</title>
 <meta http-equiv="refresh" content="0; URL=https://joinus.soryx.com/">
 <link rel="canonical" href="https://joinus.soryx.com/">
