--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 				<!-- Icons -->
 					<ul class="icons">
 						<li><a href="https://joinus.soryx.com" class="icon solid fa-chalkboard-teacher"><span class="label">Join Us</span></a></li>
-						<li><a href="https://www.soryx.net" class="icon solid fa-school"><span class="label">Academy</span></a></li>
-						<li><a href="https://www.soryx.kr" class="icon solid fa-star"><span class="label">Universe</span></a></li>
+						<li><a href="https://academy.soryx.com" class="icon solid fa-school"><span class="label">Academy</span></a></li>
+						<li><a href="https://universe.soryx.com" class="icon solid fa-star"><span class="label">Universe</span></a></li>
 						<li><a href="https://www.youtube.com/@soryxuniverse" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 						<li><a href="https://linktr.ee/soryx" class="icon solid fa-link"><span class="label">Linktree</span></a></li>
 					</ul>
